@@ -8,6 +8,4 @@ log4j-server.proprties: log4j configuration file for Cassandra server
 Optional configuration files
 ============================
 
-access.properties: used for authorization
-passwd.properties: used for authentication
 cassandra-topology.properties: used by PropertyFileSnitch
